# NumericalAlgos

./: LICENSE  README.md  cinterpolate.pxd  cinterpolate.pyx  compare.ipynb  create_interp.csv  interp.csv  interpolate.py  new_interp.py  pyproject.toml  setup.py  test_interp.csv  test_interp.ipynb
dct/: test_dct.ipynb
src/numalgos/fft/dct/: numba_dct.py
src/numalgos/interpolate/cython/: __init__.py  splines.pyx
src/numalgos/interpolate/numba/: interpolate.py  new_interp.py
